--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -692,5 +692,269 @@
     "description": "Текст кнопки дії в налаштуваннях, що вказує, що мова Rune повинна слідувати за операційною системою."
   },
   "followSystemLanguageSubtitle": "Слідуйте за налаштуваннями мови вашої системи, без спеціальних налаштувань.",
-  "@followSystemLanguageSubtitle": {}
+  "@followSystemLanguageSubtitle": {},
+  "windowSize": "Розмір вікна",
+  "@windowSize": {
+    "description": "Текст підказки для встановлення розміру вікна на сторінці теми."
+  },
+  "windowSizeSubtitle": "Оберіть бажаний розмір вікна для застосунку.",
+  "@windowSizeSubtitle": {
+    "description": "Підзаголовок, що пояснює параметри розміру вікна."
+  },
+  "normalWindowSize": "Звичайний",
+  "@normalWindowSize": {
+    "description": "Опція стандартного розміру вікна."
+  },
+  "slimWindowSize": "Вузький",
+  "@slimWindowSize": {
+    "description": "Опція більш вузького вікна."
+  },
+  "stockyWindowSize": "Широкий",
+  "@stockyWindowSize": {
+    "description": "Опція ширшого вікна."
+  },
+  "log": "Журнал",
+  "@log": {
+    "description": "Заголовок сторінки журналювання в розділі налаштувань, яка містить помилки та попередження, що виникли під час роботи програми."
+  },
+  "viewLogDetail": "Деталі журналу",
+  "@viewLogDetail": {
+    "description": "Пункт контекстного меню. Натиснення цього пункту покаже модальне вікно деталей журналу."
+  },
+  "removeLogTitle": "Видалити журнал",
+  "@removeLogTitle": {
+    "description": "Заголовок модального вікна, що інформує користувачів про видалення журналу."
+  },
+  "removeLogSubtitle": "Якщо ви видалите цей журнал, ви не зможете його відновити. Ви бажаєте його видалити?",
+  "@removeLogSubtitle": {},
+  "clearLogTitle": "Видалити всі журнали",
+  "@clearLogTitle": {
+    "description": "Заголовок модального вікна, що інформує користувачів про видалення всіх журналів."
+  },
+  "clearLogSubtitle": "Якщо ви видалите всі журнали, ви не зможете їх відновити. Ви бажаєте їх видалити?",
+  "@clearLogSubtitle": {},
+  "deleteAll": "Видалити все",
+  "@deleteAll": {
+    "description": "Пункт контекстного меню. Натиснення цього пункту видалить всі наявні елементи."
+  },
+  "noLogsAvailable": "Немає доступних журналів",
+  "@noLogsAvailable": {
+    "description": "Заголовок порожнього стану на сторінці налаштувань журналів."
+  },
+  "home": "Головна",
+  "@home": {
+    "description": "Заголовок головної сторінки налаштувань."
+  },
+  "newest": "Найновіші",
+  "@newest": {
+    "description": "Пункт випадаючого меню на головній сторінці бібліотеки."
+  },
+  "oldest": "Найстаріші",
+  "@oldest": {
+    "description": "Пункт випадаючого меню на головній сторінці бібліотеки."
+  },
+  "random": "Випадкові",
+  "@random": {
+    "description": "Пункт випадаючого меню на головній сторінці бібліотеки."
+  },
+  "mostPlayed": "Найбільш відтворювані",
+  "@mostPlayed": {
+    "description": "Заголовок групи на головній сторінці бібліотеки."
+  },
+  "personalize": "Персоналізація",
+  "@personalize": {
+    "description": "Пункт контекстного меню на головній сторінці бібліотеки."
+  },
+  "artistsLibraryHomeSubtitle": "Відкрийте та дослідіть світ улюблених виконавців",
+  "@artistsLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу виконавців на головній сторінці бібліотеки."
+  },
+  "albumsLibraryHomeSubtitle": "Зануртеся в альбоми, створені талановитими виконавцями",
+  "@albumsLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу альбомів на головній сторінці бібліотеки."
+  },
+  "playlistsLibraryHomeSubtitle": "Створіть власну персоналізовану музичну подорож",
+  "@playlistsLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу плейлистів на головній сторінці бібліотеки."
+  },
+  "tracksLibraryHomeSubtitle": "Зануртеся в треки, які ви знаєте та любите",
+  "@tracksLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу треків на головній сторінці бібліотеки."
+  },
+  "likedLibraryHomeSubtitle": "Пережийте улюблені треки знову",
+  "@likedLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу вподобаних на головній сторінці бібліотеки."
+  },
+  "mostLibraryHomeSubtitle": "Повертайтеся до мелодій, які захоплюють вас знову і знову",
+  "@mostLibraryHomeSubtitle": {
+    "description": "Підзаголовок для розділу найбільш відтворюваних на головній сторінці бібліотеки."
+  },
+  "showRune": "Показати Rune",
+  "@showRune": {
+    "description": "Пункт меню системного трею."
+  },
+  "exit": "Вихід",
+  "@exit": {
+    "description": "Пункт меню системного трею."
+  },
+  "back": "Назад",
+  "@back": {
+    "description": "Підказка для лівої верхньої іконки панелі заголовка Windows."
+  },
+  "exportTracks": "Експортувати як",
+  "@exportTracks": {
+    "description": "Пункт контекстного меню, що дозволяє користувачам експортувати колекцію"
+  },
+  "exportM3u8": "Файл плейлиста",
+  "@exportM3u8": {
+    "description": "Пункт контекстного меню, що дозволяє експортувати колекцію у форматі M3U8"
+  },
+  "exportCoverWall": "Стіна обкладинок",
+  "@exportCoverWall": {
+    "description": "Пункт контекстного меню, що дозволяє експортувати стіну обкладинок"
+  },
+  "ratio": "Співвідношення",
+  "@ratio": {
+    "description": "Назва поля введення в модальному вікні стіни обкладинок"
+  },
+  "frame": "Рамка",
+  "@frame": {
+    "description": "Назва поля введення в модальному вікні стіни обкладинок"
+  },
+  "background": "Фон",
+  "@background": {
+    "description": "Назва поля введення в модальному вікні стіни обкладинок"
+  },
+  "evaluationMode": "Режим оцінки",
+  "@evaluationMode": {
+    "description": "Заголовок модального вікна режиму оцінки"
+  },
+  "evaluationModeContent1": "Rune - це не безкоштовна пляшка пива. Ми заохочуємо вас придбати справжню ліцензію в App Store.",
+  "@evaluationModeContent1": {
+    "description": "Вміст модального вікна режиму оцінки"
+  },
+  "evaluationModeContent2": "Ліцензовані користувачі отримують автоматичні оновлення від App Store і мають привілей пропонувати нові функції безпосередньо розробникам.",
+  "@evaluationModeContent2": {
+    "description": "Вміст модального вікна режиму оцінки"
+  },
+  "evaluationModeContent3": "Ви можете відкласти це нагадування на 180 днів, і ми нагадаємо вам пізніше.",
+  "@evaluationModeContent3": {
+    "description": "Вміст модального вікна режиму оцінки"
+  },
+  "remindMeLater": "Нагадати пізніше",
+  "@remindMeLater": {
+    "description": "Кнопка дії в модальному вікні режиму оцінки"
+  },
+  "mysteriousButton": "Таємничий Button",
+  "@mysteriousButton": {
+    "description": "Пункт контекстного меню"
+  },
+  "mysteriousModalTitle": "Скрип",
+  "@mysteriousModalTitle": {
+    "description": "Заголовок модального вікна"
+  },
+  "mysteriousModalContent": "Схоже, ви активували таємничий механізм. Структура кімнати здається зміненою, відкриваючи нові простори для дослідження.",
+  "@mysteriousModalContent": {
+    "description": "Вміст модального вікна"
+  },
+  "laboratory": "Лабораторія",
+  "@laboratory": {
+    "description": "Заголовок посилання"
+  },
+  "libraryMode": "Налаштування бібліотеки",
+  "@libraryMode": {
+    "description": "Заголовок модального вікна, яке допомагає користувачеві вибрати місце зберігання бази даних"
+  },
+  "libraryModeSubtitle": "Нам потрібно дізнатися трохи більше про вашу бібліотеку. Де зберігаються ваші медіафайли?",
+  "@libraryModeSubtitle": {
+    "description": "Підзаголовок модального вікна, яке допомагає користувачеві вибрати місце зберігання бази даних"
+  },
+  "portableMode": "Локальний жорсткий диск",
+  "@portableMode": {
+    "description": "Один з варіантів режиму бібліотеки для користувачів"
+  },
+  "portableModeSubtitle": "Ми збережемо ваш медіа-індекс разом у теці бібліотеки.",
+  "@portableModeSubtitle": {
+    "description": "Підзаголовок варіанта режиму бібліотеки для користувачів"
+  },
+  "localMode": "У хмарі",
+  "@localMode": {
+    "description": "Один з варіантів режиму бібліотеки для користувачів"
+  },
+  "localModeSubtitle": "Ми збережемо ваш медіа-індекс у теці налаштувань Rune.",
+  "@localModeSubtitle": {
+    "description": "Підзаголовок варіанта режиму бібліотеки для користувачів"
+  },
+  "rememberWindowSize": "Запам'ятати розмір вікна",
+  "@rememberWindowSize": {
+    "description": "Назва параметра налаштувань на сторінці теми"
+  },
+  "rememberWindowSizeSubtitle": "Збережіть розмір вікна під час його налаштування та запускайте програму з тими самими розмірами наступного разу.",
+  "@rememberWindowSizeSubtitle": {
+    "description": "Підзаголовок параметра налаштувань на сторінці теми"
+  },
+  "closeNotification": "Rune все ще працює",
+  "@closeNotification": {
+    "description": "Сповіщення з'являється, коли користувач закриває вікно"
+  },
+  "closeNotificationSubtitle": "Rune наразі працює у фоновому режимі. Ви можете легко знайти її в системному треї.",
+  "@closeNotificationSubtitle": {
+    "description": ""
+  },
+  "register": "Реєстрація",
+  "@register": {
+    "description": "Назва плитки реєстрації на сторінці налаштувань"
+  },
+  "evaluationModeContent4": "Ви можете придбати музичний файл як реєстраційний ключ у магазині нижче. Натисніть \"Реєстрація\", щоб перевірити ваш статус легального користувача.",
+  "@evaluationModeContent4": {
+    "description": "Вміст модального вікна режиму оцінки"
+  },
+  "registerAction": "Реєстрація",
+  "@registerAction": {
+    "description": "Напис на кнопці реєстрації в модальному вікні"
+  },
+  "registerFailed": "Невдача",
+  "@registerFailed": {
+    "description": "Заголовок модального вікна невдалої реєстрації"
+  },
+  "registerFailedSubtitle": "Під час процесу перевірки сталася помилка.",
+  "@registerFailedSubtitle": {
+    "description": "Вміст модального вікна невдалої реєстрації"
+  },
+  "registerSuccess": "Завершено",
+  "@registerSuccess": {
+    "description": "Заголовок модального вікна успішної реєстрації"
+  },
+  "registerSuccessSubtitle": "Вітаємо! Ваше програмне забезпечення успішно зареєстровано. Дякуємо, що обрали Rune.",
+  "@registerSuccessSubtitle": {
+    "description": "Вміст модального вікна успішної реєстрації"
+  },
+  "registerInvalid": "Недійсний ключ",
+  "@registerInvalid": {
+    "description": "Заголовок модального вікна недійсного реєстраційного ключа"
+  },
+  "registerInvalidSubtitle": "Наданий вами файл ключа є недійсним. Перевірте файл і спробуйте знову.",
+  "@registerInvalidSubtitle": {
+    "description": "Вміст модального вікна з недійсним реєстраційним ключем"
+  },
+  "importM3u8Success": "Частково успішно",
+  "@importM3u8Success": {
+    "description": "Заголовок модального вікна про частково успішне імпортування"
+  },
+  "importM3u8SuccessSubtitle": "Ваші треки були імпортовані, але деякі не були знайдені.",
+  "@importM3u8SuccessSubtitle": {
+    "description": "Вміст модального вікна про частково успішне імпортування"
+  },
+  "importM3u8Failed": "Імпортування не вдалося",
+  "@importM3u8Failed": {
+    "description": "Заголовок модального вікна про невдале імпортування"
+  },
+  "importM3u8FailedSubtitle": "Під час процесу імпортування сталася помилка.",
+  "@importM3u8FailedSubtitle": {
+    "description": "Вміст модального вікна про невдале імпортування"
+  },
+  "importM3u8": "Імпортувати плейлист",
+  "@importM3u8": {
+    "description": "Елемент контекстного меню для імпортування нового плейлисту."
+  }
 }
