--- a/lib/l10n/intl_zh_Hant_NAN.arb
+++ b/lib/l10n/intl_zh_Hant_NAN.arb
@@ -694,5 +694,269 @@
   "followSystemLanguageSubtitle": "照系統的話語設定，免特別設定。",
   "@followSystemLanguageSubtitle": {
     "description": ""
+  },
+  "windowSize": "視窗大細",
+  "@windowSize": {
+    "description": "主題頁面中設定視窗大細的提示文字。"
+  },
+  "windowSizeSubtitle": "選擇程式欲用的視窗大細。",
+  "@windowSizeSubtitle": {
+    "description": "解說視窗大細選項的副標題。"
+  },
+  "normalWindowSize": "正常",
+  "@normalWindowSize": {
+    "description": "正常視窗大細的選項。"
+  },
+  "slimWindowSize": "狹",
+  "@slimWindowSize": {
+    "description": "較狹的視窗大細的選項。"
+  },
+  "stockyWindowSize": "闊",
+  "@stockyWindowSize": {
+    "description": "較闊的視窗大細的選項。"
+  },
+  "log": "記錄",
+  "@log": {
+    "description": "設定部分中的記錄頁面的標題，這頁面包含程式執行時發生的錯誤佮警告。"
+  },
+  "viewLogDetail": "看記錄詳情",
+  "@viewLogDetail": {
+    "description": "選單內的一个項目。點這項目會顯示記錄詳情視窗。"
+  },
+  "removeLogTitle": "刣掉記錄",
+  "@removeLogTitle": {
+    "description": "通知使用者伊欲刣掉一筆記錄的視窗標題。"
+  },
+  "removeLogSubtitle": "若是刣掉這個記錄，你就袂當恢復矣。你確定欲刣掉？",
+  "@removeLogSubtitle": {},
+  "clearLogTitle": "刣掉所有記錄",
+  "@clearLogTitle": {
+    "description": "通知使用者伊欲刣掉所有記錄的視窗標題。"
+  },
+  "clearLogSubtitle": "若是刣掉所有記錄，你就袂當恢復矣。你確定欲刣掉？",
+  "@clearLogSubtitle": {},
+  "deleteAll": "全部刣掉",
+  "@deleteAll": {
+    "description": "選單內的一个項目。點這項目會刣掉所有會用得的項目。"
+  },
+  "noLogsAvailable": "無記錄通用",
+  "@noLogsAvailable": {
+    "description": "記錄設定頁面的空狀態圖示的標題。"
+  },
+  "home": "頭頁",
+  "@home": {
+    "description": "頭頁設定頁面的標題。"
+  },
+  "newest": "上新",
+  "@newest": {
+    "description": "媒體庫頭頁設定下拉選單內的項目。"
+  },
+  "oldest": "上舊",
+  "@oldest": {
+    "description": "媒體庫頭頁設定下拉選單內的項目。"
+  },
+  "random": "隨機",
+  "@random": {
+    "description": "媒體庫頭頁設定下拉選單內的項目。"
+  },
+  "mostPlayed": "上捷放的",
+  "@mostPlayed": {
+    "description": "媒體庫頭頁中的標題。"
+  },
+  "personalize": "個人化",
+  "@personalize": {
+    "description": "媒體庫頭頁的選單內的項目。"
+  },
+  "artistsLibraryHomeSubtitle": "探索佮發現你上愛的藝術家的世界",
+  "@artistsLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中藝術家部分的描述。"
+  },
+  "albumsLibraryHomeSubtitle": "沉浸佇才華洋溢的藝術家創作的專輯內底",
+  "@albumsLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中專輯部分的描述。"
+  },
+  "playlistsLibraryHomeSubtitle": "安排你專屬的个人聽音樂之旅",
+  "@playlistsLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中播放清單部分的描述。"
+  },
+  "tracksLibraryHomeSubtitle": "深入研究你熟似閣愛的歌",
+  "@tracksLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中音軌部分的描述。"
+  },
+  "likedLibraryHomeSubtitle": "重新聽你上珍惜的歌",
+  "@likedLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中收藏部分的描述。"
+  },
+  "mostLibraryHomeSubtitle": "閣再聽彼寡一直吸引你的曲調",
+  "@mostLibraryHomeSubtitle": {
+    "description": "媒體庫頭頁中最多播放部分的描述。"
+  },
+  "showRune": "顯示 Rune",
+  "@showRune": {
+    "description": "系統列選單內的項目。"
+  },
+  "exit": "結束",
+  "@exit": {
+    "description": "系統列選單內的項目。"
+  },
+  "back": "轉去",
+  "@back": {
+    "description": "Windows 標題列倒手頂角圖示的工具提示。"
+  },
+  "exportTracks": "匯出做",
+  "@exportTracks": {
+    "description": "選單內允許使用者匯出集合的項目"
+  },
+  "exportM3u8": "播放清單檔案",
+  "@exportM3u8": {
+    "description": "選單內的一个項目，允許使用者用 M3U8 格式匯出集合"
+  },
+  "exportCoverWall": "封面牆",
+  "@exportCoverWall": {
+    "description": "選單內的一个項目，允許使用者匯出封面牆"
+  },
+  "ratio": "比例",
+  "@ratio": {
+    "description": "封面牆視窗的輸入欄位標題"
+  },
+  "frame": "框仔",
+  "@frame": {
+    "description": "封面牆視窗的輸入欄位標題"
+  },
+  "background": "背景",
+  "@background": {
+    "description": "封面牆視窗的輸入欄位標題"
+  },
+  "evaluationMode": "評估模式",
+  "@evaluationMode": {
+    "description": "評估模式視窗的標題"
+  },
+  "evaluationModeContent1": "Rune 毋是免費軟體。阮鼓勵你對應用程式商店買正版授權。",
+  "@evaluationModeContent1": {
+    "description": "評估模式視窗的內容"
+  },
+  "evaluationModeContent2": "授權使用者會當享有應用程式商店提供的自動更新，嘛有權直接向開發人員提出新功能。",
+  "@evaluationModeContent2": {
+    "description": "評估模式視窗的內容"
+  },
+  "evaluationModeContent3": "你會當選擇佇 180 工內關掉這个提醒，阮後擺會閣再提醒你。",
+  "@evaluationModeContent3": {
+    "description": "評估模式視窗的內容"
+  },
+  "remindMeLater": "後擺提醒",
+  "@remindMeLater": {
+    "description": "評估模式視窗的動作按鈕"
+  },
+  "mysteriousButton": "神祕按鈕",
+  "@mysteriousButton": {
+    "description": "選單內的項目"
+  },
+  "mysteriousModalTitle": "嘎吱",
+  "@mysteriousModalTitle": {
+    "description": "視窗的標題"
+  },
+  "mysteriousModalContent": "你敢若觸動著一个神祕的機關。空間的結構親像改變矣，露出新的探索區域。",
+  "@mysteriousModalContent": {
+    "description": "視窗的內容"
+  },
+  "laboratory": "實驗室",
+  "@laboratory": {
+    "description": "連結標題的標題"
+  },
+  "libraryMode": "媒體庫設定",
+  "@libraryMode": {
+    "description": "視窗的標題，用來指導使用者選擇欲儲存資料庫的所在"
+  },
+  "libraryModeSubtitle": "阮需要閣較了解你的媒體庫。你的媒體檔案囥佇佗位？",
+  "@libraryModeSubtitle": {
+    "description": "視窗的副標題，引導使用者選擇資料庫的儲存位置"
+  },
+  "portableMode": "本機硬碟",
+  "@portableMode": {
+    "description": "使用者的一个候選庫模式"
+  },
+  "portableModeSubtitle": "阮會共你的媒體索引嘛囥佇媒體庫所在的資料夾內底。",
+  "@portableModeSubtitle": {
+    "description": "使用者的候選庫模式的副標題"
+  },
+  "localMode": "雲端",
+  "@localMode": {
+    "description": "使用者的一个候選庫模式"
+  },
+  "localModeSubtitle": "阮會共你的媒體索引囥佇 Rune 的設定目錄內底。",
+  "@localModeSubtitle": {
+    "description": "使用者的候選庫模式的副標題"
+  },
+  "rememberWindowSize": "記得視窗大細",
+  "@rememberWindowSize": {
+    "description": "主題頁面中設定選項的標題"
+  },
+  "rememberWindowSizeSubtitle": "調整視窗大細的時陣會記錄落來，下擺開程式的時陣大細袂變。",
+  "@rememberWindowSizeSubtitle": {
+    "description": "主題頁面中設定選項的副標題"
+  },
+  "closeNotification": "Rune 猶咧執行",
+  "@closeNotification": {
+    "description": "當使用者關掉視窗的時陣，彈出的通知"
+  },
+  "closeNotificationSubtitle": "Rune 佇背景咧執行。你會當佇系統列內底緊找著。",
+  "@closeNotificationSubtitle": {
+    "description": ""
+  },
+  "register": "註冊",
+  "@register": {
+    "description": "設定頁面中註冊磚的標題。"
+  },
+  "evaluationModeContent4": "你會當對下跤的商店買音樂檔案來做註冊碼。點「註冊」來驗證你的正版狀態。",
+  "@evaluationModeContent4": {
+    "description": "評估模式視窗的內容。"
+  },
+  "registerAction": "註冊",
+  "@registerAction": {
+    "description": "視窗中註冊按鈕的標籤。"
+  },
+  "registerFailed": "註冊失敗",
+  "@registerFailed": {
+    "description": "註冊失敗視窗的標題。"
+  },
+  "registerFailedSubtitle": "驗證過程中有錯誤發生。",
+  "@registerFailedSubtitle": {
+    "description": "註冊失敗視窗的內容。"
+  },
+  "registerSuccess": "註冊成功",
+  "@registerSuccess": {
+    "description": "註冊成功視窗的標題。"
+  },
+  "registerSuccessSubtitle": "恭喜！你的軟體已經註冊成功，感謝你選擇 Rune。",
+  "@registerSuccessSubtitle": {
+    "description": "註冊成功視窗的內容。"
+  },
+  "registerInvalid": "金鑰無效",
+  "@registerInvalid": {
+    "description": "無效註冊金鑰視窗的標題。"
+  },
+  "registerInvalidSubtitle": "你提供的金鑰檔案無效。請檢查檔案閣重試。",
+  "@registerInvalidSubtitle": {
+    "description": "無效註冊金鑰視窗的內容。"
+  },
+  "importM3u8Success": "匯入成功",
+  "@importM3u8Success": {
+    "description": "部分匯入成功視窗的標題。"
+  },
+  "importM3u8SuccessSubtitle": "你的音軌已經匯入，毋過有的音軌佇資料庫內底揣無。",
+  "@importM3u8SuccessSubtitle": {
+    "description": "部分匯入成功視窗的內容。"
+  },
+  "importM3u8Failed": "匯入失敗",
+  "@importM3u8Failed": {
+    "description": "匯入失敗視窗的標題。"
+  },
+  "importM3u8FailedSubtitle": "匯入過程中有錯誤發生。",
+  "@importM3u8FailedSubtitle": {
+    "description": "匯入失敗視窗的內容。"
+  },
+  "importM3u8": "匯入播放清單",
+  "@importM3u8": {
+    "description": "選單項目，指導使用者匯入新播放清單。"
   }
 }
